--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   source developer. For more about me please see the links below.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://rory-sullivan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: rory-sullivan
+github_url: https://github.com/Rory-Sullivan
 linkedin_url: https://www.linkedin.com/in/rory-sullivan-11751a1a5/
 
 # Build settings
