--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://rory-sullivan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_url: https://github.com/Rory-Sullivan
-linkedin_url: https://www.linkedin.com/in/rory-sullivan-11751a1a5/
+linkedin_url: https://www.linkedin.com/in/rorysullivan314/
 
 # Build settings
 plugins:
