--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Hi, welcome to my personal website. I'm Rory, a software engineer, and open
   source developer. For more about me please see the links below.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://rory-sullivan.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://rorys.dev/" # the base hostname & protocol for your site, e.g. http://example.com
 github_url: https://github.com/Rory-Sullivan
 linkedin_url: https://www.linkedin.com/in/rorysullivan314/
 
