Updates polymorphism with Rust drafts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
         "backcountry",
+        "monomorphization",
         "monomorphizes",
         "NWAC",
-        "turbofish"
+        "turbofish",
+        "upcasting"
     ]
 }
